--- a/Main.storyboard
+++ b/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -750,15 +749,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JUG-5g-vNr">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_bai" translatesAutoresizingMaskIntoConstraints="NO" id="GnV-2e-YRL">
-                                        <rect key="frame" x="157" y="100" width="100" height="100"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="GnV-2e-YRL" secondAttribute="height" multiplier="1:1" id="evb-fo-DSy"/>
-                                            <constraint firstAttribute="width" constant="100" id="m87-PT-v4Q"/>
-                                        </constraints>
-                                    </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yza-pa-1jS">
-                                        <rect key="frame" x="40" y="233" width="334" height="135"/>
+                                        <rect key="frame" x="40" y="100" width="334" height="135"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uaK-mm-Im9">
                                                 <rect key="frame" x="8" y="5" width="318" height="40"/>
@@ -853,9 +845,7 @@
                                 <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="yza-pa-1jS" secondAttribute="trailing" constant="40" id="4UG-sH-hI2"/>
-                                    <constraint firstItem="GnV-2e-YRL" firstAttribute="top" secondItem="JUG-5g-vNr" secondAttribute="top" constant="100" id="6pl-NW-fJM"/>
-                                    <constraint firstItem="GnV-2e-YRL" firstAttribute="centerX" secondItem="JUG-5g-vNr" secondAttribute="centerX" id="DwO-Lb-Baa"/>
-                                    <constraint firstItem="yza-pa-1jS" firstAttribute="top" secondItem="GnV-2e-YRL" secondAttribute="bottom" constant="33" id="Wid-Mt-Pdl"/>
+                                    <constraint firstItem="yza-pa-1jS" firstAttribute="top" secondItem="JUG-5g-vNr" secondAttribute="top" constant="100" id="Y9M-9w-i96"/>
                                     <constraint firstItem="yza-pa-1jS" firstAttribute="leading" secondItem="JUG-5g-vNr" secondAttribute="leading" constant="40" id="kDb-yx-w2a"/>
                                 </constraints>
                             </view>
@@ -1656,12 +1646,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="eSv-5V-fLL">
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="eSv-5V-fLL">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="gmr-mu-1bY">
-                                    <rect key="frame" x="0.0" y="-28" width="414" height="56"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="56" id="V5x-VL-p9O"/>
                                     </constraints>
@@ -3495,7 +3485,6 @@
         <image name="ic_more_horiz_18pt" width="18" height="18"/>
         <image name="ic_perm_identity_18pt" width="18" height="18"/>
         <image name="ic_search_18pt" width="18" height="18"/>
-        <image name="logo_bai" width="1024" height="1024"/>
         <image name="paperclip.gif" width="10" height="13"/>
         <image name="tab_message" width="18" height="18"/>
         <image name="tab_new_post" width="18" height="18"/>
